bug 'z-index' on style

--- a/slider/sass/styles.sass
+++ b/slider/sass/styles.sass
@@ -46,7 +46,7 @@
 
 
 .btn-move-left
-  z-index: 500
+  z-index: 10
   width: 24px
   height: 43px
   position: absolute
